{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 57,
  "lineage": "babc11a6-b0bc-6e29-bfed-729860d32b0d",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "data",
      "type": "aws_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:440934290595:route-table/rtb-000c18cd360608d01",
            "associations": [
              {
                "gateway_id": "",
                "main": true,
                "route_table_association_id": "rtbassoc-07e802db16dbc1762",
                "route_table_id": "rtb-000c18cd360608d01",
                "subnet_id": ""
              }
            ],
            "filter": [
              {
                "name": "association.main",
                "values": [
                  "true"
                ]
              }
            ],
            "gateway_id": null,
            "id": "rtb-000c18cd360608d01",
            "owner_id": "440934290595",
            "region": "us-east-1",
            "route_table_id": "rtb-000c18cd360608d01",
            "routes": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b7f7d0ed4323c54f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "subnet_id": null,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-069d54bb2121a41f7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:440934290595:vpc/vpc-069d54bb2121a41f7",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0ff0e4aa4a42e3444",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0e161e808543e52b9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-069d54bb2121a41f7",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-000c18cd360608d01",
            "owner_id": "440934290595",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f493d8103a894de3",
            "arn": "arn:aws:ec2:us-east-1:440934290595:elastic-ip/eipalloc-0f493d8103a894de3",
            "association_id": "eipassoc-0a0e507794bec973f",
            "domain": "vpc",
            "id": "eipalloc-0f493d8103a894de3",
            "network_border_group": "us-east-1",
            "network_interface": "eni-024e634fa97e69f48",
            "private_dns": "ip-10-0-1-69.ec2.internal",
            "private_ip": "10.0.1.69",
            "public_dns": "ec2-100-52-137-112.compute-1.amazonaws.com",
            "public_ip": "100.52.137.112",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "roboshop-dev-nat",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "roboshop-dev-nat",
              "Project": "roboshop",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:440934290595:internet-gateway/igw-0fd118de642e7f725",
            "id": "igw-0fd118de642e7f725",
            "owner_id": "440934290595",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "roboshop-dev",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "roboshop-dev",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "vpc_id": "vpc-07b74d90816206898"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f493d8103a894de3",
            "association_id": "eipassoc-0a0e507794bec973f",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0d3e5e10d441b362e",
            "network_interface_id": "eni-024e634fa97e69f48",
            "private_ip": "10.0.1.69",
            "public_ip": "100.52.137.112",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-015321f5d15d659bc",
            "tags": {
              "Environment": "dev",
              "Name": "roboshop-dev",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "roboshop-dev",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "vpc_id": "vpc-07b74d90816206898"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06222730bdd0a5b1a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d3e5e10d441b362e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-06222730bdd0a5b1a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "440934290595",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-06222730bdd0a5b1a"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "172.31.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06222730bdd0a5b1a3854007479",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-06222730bdd0a5b1a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0f3ea8c25e2bed6d6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "440934290595",
            "destination_cidr_block": "172.31.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-06222730bdd0a5b1a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_vpc_peering_connection.default",
            "module.vpc.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "default_peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-000c18cd360608d01179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-000c18cd360608d01",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0f3ea8c25e2bed6d6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "440934290595",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-000c18cd360608d01"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_vpc_peering_connection.default",
            "module.vpc.data.aws_route_table.default",
            "module.vpc.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0def6f46cefd9d1641080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d3e5e10d441b362e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0def6f46cefd9d164",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "440934290595",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0def6f46cefd9d164"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "172.31.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0def6f46cefd9d1643854007479",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0def6f46cefd9d164",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0f3ea8c25e2bed6d6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "440934290595",
            "destination_cidr_block": "172.31.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0def6f46cefd9d164"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_vpc_peering_connection.default",
            "module.vpc.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0fd118de642e7f725",
            "id": "r-rtb-085355a1a4e1117941080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-085355a1a4e111794",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "440934290595",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-085355a1a4e111794"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "172.31.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-085355a1a4e1117943854007479",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-085355a1a4e111794",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0f3ea8c25e2bed6d6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "440934290595",
            "destination_cidr_block": "172.31.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-085355a1a4e111794"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_vpc_peering_connection.default",
            "module.vpc.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:440934290595:route-table/rtb-06222730bdd0a5b1a",
            "id": "rtb-06222730bdd0a5b1a",
            "owner_id": "440934290595",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d3e5e10d441b362e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "roboshop-dev-database",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "roboshop-dev-database",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-07b74d90816206898"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "440934290595",
            "id": "rtb-06222730bdd0a5b1a",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:440934290595:route-table/rtb-0def6f46cefd9d164",
            "id": "rtb-0def6f46cefd9d164",
            "owner_id": "440934290595",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d3e5e10d441b362e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "roboshop-dev-private",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "roboshop-dev-private",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-07b74d90816206898"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "440934290595",
            "id": "rtb-0def6f46cefd9d164",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:440934290595:route-table/rtb-085355a1a4e111794",
            "id": "rtb-085355a1a4e111794",
            "owner_id": "440934290595",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fd118de642e7f725",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "roboshop-dev-public",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "roboshop-dev-public",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-07b74d90816206898"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "440934290595",
            "id": "rtb-085355a1a4e111794",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0424168cf4b3ef589",
            "region": "us-east-1",
            "route_table_id": "rtb-06222730bdd0a5b1a",
            "subnet_id": "subnet-08586525e0a9dd23d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e53f1af031d053bb",
            "region": "us-east-1",
            "route_table_id": "rtb-06222730bdd0a5b1a",
            "subnet_id": "subnet-0d918d701859e6748"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca597436434fd1b5",
            "region": "us-east-1",
            "route_table_id": "rtb-0def6f46cefd9d164",
            "subnet_id": "subnet-03178731c428011ad"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09677e2d8f4eb841b",
            "region": "us-east-1",
            "route_table_id": "rtb-0def6f46cefd9d164",
            "subnet_id": "subnet-0888f272bf83bcde0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ae478dc0931ef532",
            "region": "us-east-1",
            "route_table_id": "rtb-085355a1a4e111794",
            "subnet_id": "subnet-015321f5d15d659bc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a4a0f508e364c879",
            "region": "us-east-1",
            "route_table_id": "rtb-085355a1a4e111794",
            "subnet_id": "subnet-0ebe162e6d6d71810"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:440934290595:subnet/subnet-08586525e0a9dd23d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08586525e0a9dd23d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "440934290595",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "roboshop-dev-database-us-east-1a",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "roboshop-dev-database-us-east-1a",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "vpc_id": "vpc-07b74d90816206898"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "440934290595",
            "id": "subnet-08586525e0a9dd23d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:440934290595:subnet/subnet-0d918d701859e6748",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d918d701859e6748",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "440934290595",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "roboshop-dev-database-us-east-1b",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "roboshop-dev-database-us-east-1b",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "vpc_id": "vpc-07b74d90816206898"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "440934290595",
            "id": "subnet-0d918d701859e6748",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:440934290595:subnet/subnet-03178731c428011ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03178731c428011ad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "440934290595",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "roboshop-dev-private-us-east-1a",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "roboshop-dev-private-us-east-1a",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "vpc_id": "vpc-07b74d90816206898"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "440934290595",
            "id": "subnet-03178731c428011ad",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:440934290595:subnet/subnet-0888f272bf83bcde0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0888f272bf83bcde0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "440934290595",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "roboshop-dev-private-us-east-1b",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "roboshop-dev-private-us-east-1b",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "vpc_id": "vpc-07b74d90816206898"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "440934290595",
            "id": "subnet-0888f272bf83bcde0",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:440934290595:subnet/subnet-015321f5d15d659bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-015321f5d15d659bc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "440934290595",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "roboshop-dev-public-us-east-1a",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "roboshop-dev-public-us-east-1a",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "vpc_id": "vpc-07b74d90816206898"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "440934290595",
            "id": "subnet-015321f5d15d659bc",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:440934290595:subnet/subnet-0ebe162e6d6d71810",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ebe162e6d6d71810",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "440934290595",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "roboshop-dev-public-us-east-1b",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "roboshop-dev-public-us-east-1b",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "vpc_id": "vpc-07b74d90816206898"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "440934290595",
            "id": "subnet-0ebe162e6d6d71810",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:440934290595:vpc/vpc-07b74d90816206898",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0208b03d23157b343",
            "default_route_table_id": "rtb-0f47adf2e31228fc7",
            "default_security_group_id": "sg-08d1cbdadb516083e",
            "dhcp_options_id": "dopt-0e161e808543e52b9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07b74d90816206898",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f47adf2e31228fc7",
            "owner_id": "440934290595",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "roboshop-dev",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "roboshop-dev",
              "Project": "roboshop",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "440934290595",
            "id": "vpc-07b74d90816206898",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": true
              }
            ],
            "auto_accept": true,
            "id": "pcx-0f3ea8c25e2bed6d6",
            "peer_owner_id": "440934290595",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-069d54bb2121a41f7",
            "region": "us-east-1",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": true
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "roboshop-dev-default",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "roboshop-dev-default",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "vpc_id": "vpc-07b74d90816206898"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}